# claude-launcher

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: validate.py
.claude/discovery/: Claude 安装器 PRD.md
src/: App.vue  main.ts  style.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: ccswitch.rs  claude.rs  conda.rs  detect.rs  download.rs  git.rs  installer.rs  mod.rs  node.rs  onboarding.rs  process.rs  workflow.rs
src/router/: index.ts
src/stores/: installer.ts
src/views/: CompleteView.vue  ProgressView.vue  WelcomeView.vue
