[package]
name = "claude-launcher"
version = "0.1.0"
description = "Claude 生态启动器 - 环境安装、版本管理、IDE 启动"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "claude_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
which = "6"
winreg = "0.52"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "6"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
